removed unused files

--- a/test-app/res/values/strings.xml
+++ b/test-app/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <string name="app_name">Test App</string>
+    <string name="app_name">Seek Bar Test App</string>
 
 </resources>
